--- a/HTML_CSS/basic/kadai_005/html/kadai_005.html
+++ b/HTML_CSS/basic/kadai_005/html/kadai_005.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="このページは5書の課題です">
+    <meta name="description" content="このページは5章の課題です">
     <title>5章課題</title>
 </head>
 <body>
@@ -10,6 +10,6 @@
     <p>私は中学時代にサッカーを始めました。<br>
     現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
     <img src="../images/sample.jpg" alt="サッカーボールの写真">
-    <a href="http://x.com/samuraijuku">私のプロフィールはこちら</a>
+    <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
