--- a/HTML_CSS/kadai_013/index.html
+++ b/HTML_CSS/kadai_013/index.html
@@ -23,9 +23,7 @@
       <img id="menu-sp" src="images/button-menu.png" alt="ナビゲーションを開く" onclick="document.getElementById('nav-sp').style.display = 'block'">
       <!-- スマホ用ナビゲーション -->
       <div id="nav-sp">
-        <button id="close" onclick="document.getElementById('nav-sp').style.display = 'none'">
-          <img src="images/button-close.png" alt="ナビゲーションを閉じる">
-        </button>
+        <img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementById('nav-sp').style.display = 'none'">
         <nav>
           <ul>
           <li><img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementById('nav-sp').style.display = 'none'"></li>
