--- a/JavaScript/Udemy1/Todo/src/todoindex.html
+++ b/JavaScript/Udemy1/Todo/src/todoindex.html
@@ -3,6 +3,7 @@
     <head>
         <title>TODO(JS)</title>
         <meta charset="UTF-8" />
+        <!-- <link rel="stylesheet" href="todostyle.css"> -->
     </head>
 
     <body>
@@ -40,6 +41,6 @@
                 </li> -->
             </ul>
         </div>
-        <script src="src/index.js"></script>
+        <script src="./todoscript.mjs" type="module"></script>
     </body>
 </html>
