--- a/JavaScript/UdemyTodo/index.html
+++ b/JavaScript/UdemyTodo/index.html
@@ -6,41 +6,40 @@
 </head>
 <body>
     <div class = "input-area">
-        <input placeholder="TODOを入力" />
-        <button>追加</button>
+        <input id = "add-text" placeholder="TODOを入力" />
+        <button id = "add-button">追加</button>
     </div>
-    <div>
-        <p>未完了のTODO</p>
-        <ul>
+    <div class="incomplete-area">
+        <p class="title">未完了のTODO</p>
+        <ul class = "incomplete-list">
             <li>
-                <div>
-                    <p>勉強する</p>
+                <div class="list-row">
+                    <p class="todo-item">TODOです</p>
                     <button>完了</button>
                     <button>削除</button>
                 </div>
             </li>
             <li>
-                <div>
-                    <p>本を読む</p>
+                <div class="list-row">
+                    <p class="todo-item">TODOです2</p>
                     <button>完了</button>
                     <button>削除</button>
                 </div>
             </li>
         </ul>
     </div>
-    <div>
-        <p>完了したのTODO</p>
+    <div class = "complete-area">
+        <p class="title">完了したのTODO</p>
         <ul>
             <li>
-                <div>
-                    <p>TODOでした</p>
+                <div class="list-row">
+                    <p class="todo-item">TODOでした</p>
                     <button>戻す</button>
-                    
                 </div>
             </li>
             <li>
-                <div>
-                    <p>TODOでした</p>
+                <div class="list-row">
+                    <p class="todo-item">TODOでした</p>
                     <button>戻す</button>
                 </div>
             </li>
